Fix typos in comments for clarity in index.css and stories.ts files.

--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 /**
- * This file is needs only to support Tailwind CSS autocompletion:
+ * This file is needed only to support Tailwind CSS autocompletion:
  * For Tailwind CSS configuration use:
  * * `./.storybook/index.css` – storybook tailwind config.
  * * `./src/tailwind.css` – vueless tailwind preset.
