Updated storybook preset.

--- a/.storybook/themes/preview.css
+++ b/.storybook/themes/preview.css
@@ -1,5 +1,5 @@
 @import "tailwindcss";
-@import "../src/tailwind.css";
+@import "../../src/tailwind.css";
 
 /* -------------------- Storybook Preview UI -------------------- */
 /* -------------------- General -------------------- */
