--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -22,7 +22,7 @@
 
 @layer base {
   body {
-    @apply antialiased text-(--vl-text) bg-(--vl-bg) scheme-light dark:scheme-dark;
+    @apply antialiased text-(--vl-text) bg-(--vl-bg) tracking-(--vl-letter-spacing) scheme-light dark:scheme-dark;
   }
 
   [type='checkbox']:checked {
